force-app/main/default/objects/Cart_Line_Item__c/fields/Effective_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUnitPrice__c</fullName>
    <formula>ListPrice__c  * (1- Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>